add rudimentary error screen